# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  BinaryIncrement.json  README.md  Untitled.json  Uppercase.json  pyproject.toml  tasks.py  test.json  testi.json  uppercase.json
dokumentaatio/: arkkitehtuuri.md  class_diagram.uml  jaturing_init.wsd  kaytto-ohje.md  step_forward.wsd  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: .coverage  pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: .coverage  maksukortti_test.py  test_kassapaate.py
laskarit/viikko3/: kaaviot.md  machine.wsd  machine_updated.wsd  monopoli_01.uml  monopoli_02.uml  seutuliikenne.wsd
src/: file_io.py  jaturing.py  jaturing_GUI.py  rule.py  state.py  tape.py
src/tests/: file_io_test.py  jaturing_test.py  rule_test.py  state_test.py  tape_test.py
src/ui/: jaturing_GUI.py  jaturing_app.py  jaturing_frame.py
